--- a/app/src/main/res/layout/yijian_fankui_act.xml
+++ b/app/src/main/res/layout/yijian_fankui_act.xml
@@ -8,6 +8,7 @@
     >
 <include layout="@layout/app_title"/>
     <com.zhizhong.yujian.view.MyEditText
+        android:id="@+id/et_yjfk_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top"
@@ -16,6 +17,7 @@
         android:textSize="14sp"
         android:padding="10dp"
         android:lines="8"
+        android:maxLength="500"
         />
     <View
         android:layout_width="match_parent"
@@ -23,6 +25,7 @@
         android:background="@color/divider_color"
         />
     <com.github.fastshape.MyTextView
+        android:id="@+id/tv_yjfk_commit"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="提交"
