--- a/app/src/main/res/layout/update_phone_act.xml
+++ b/app/src/main/res/layout/update_phone_act.xml
@@ -3,17 +3,12 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              xmlns:tools="http://schemas.android.com/tools"
               android:background="@color/bg_color"
               android:orientation="vertical"
     >
 
     <include layout="@layout/app_title"/>
-
-    <com.library.base.ProgressLayout
-        android:id="@id/pl_load"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -21,6 +16,13 @@
             android:orientation="vertical"
             >
             <!--your view-->
+            <LinearLayout
+                android:id="@+id/ll_update_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_vertical"
+                >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -40,9 +42,10 @@
                     />
 
                 <TextView
+                    android:id="@+id/tv_update_phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1888***32342"
+                    tools:text="1888***32342"
                     android:textSize="14sp"
                     />
             </LinearLayout>
@@ -63,6 +66,7 @@
                     android:textSize="14sp"
                     />
                 <com.zhizhong.yujian.view.MyEditText
+                    android:id="@+id/et_update_phone_pwd"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:gravity="center_vertical"
@@ -79,6 +83,8 @@
                 android:layout_height="5dp"
                 android:background="@color/divider_color"
                 />
+
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -96,6 +102,7 @@
                     android:textSize="14sp"
                     />
                 <com.zhizhong.yujian.view.MyEditText
+                    android:id="@+id/et_update_phone_new"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="40dp"
@@ -109,6 +116,7 @@
                     android:layout_marginRight="15dp"
                     />
                 <com.github.fastshape.MyTextView
+                    android:id="@+id/tv_update_phone_getcode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="获取验证码"
@@ -144,6 +152,7 @@
                     android:textSize="14sp"
                     />
                 <com.zhizhong.yujian.view.MyEditText
+                    android:id="@+id/et_update_phone_code"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:gravity="center_vertical"
@@ -161,6 +170,7 @@
                 android:background="@color/divider_color"
                 />
             <com.github.fastshape.MyTextView
+                android:id="@+id/tv_update_phone_complete"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="确定"
@@ -175,5 +185,4 @@
                 android:layout_marginRight="10dp"
                 />
         </LinearLayout>
-    </com.library.base.ProgressLayout>
 </LinearLayout>
