--- a/app/src/main/res/layout/update_pwd_act.xml
+++ b/app/src/main/res/layout/update_pwd_act.xml
@@ -36,6 +36,7 @@
                 android:ems="5"
                 />
             <com.zhizhong.yujian.view.MyEditText
+                android:id="@+id/et_update_pwd_old"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:gravity="center_vertical"
@@ -65,6 +66,7 @@
                     android:ems="5"
                     />
                 <com.zhizhong.yujian.view.MyEditText
+                    android:id="@+id/et_update_pwd_new"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:gravity="center_vertical"
@@ -75,7 +77,38 @@
                     android:hint="请输入新密码"
                     />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:background="@color/white"
+                android:layout_marginTop="2px"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="确认密码:"
+                    android:textColor="@color/gray_66"
+                    android:textSize="14sp"
+                    android:ems="5"
+                    />
+                <com.zhizhong.yujian.view.MyEditText
+                    android:id="@+id/et_update_pwd_re"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:gravity="center_vertical"
+                    android:textSize="13sp"
+                    app:solidColor="@color/white"
+                    android:inputType="textWebPassword"
+                    android:imeOptions="actionNext"
+                    android:hint="请确认密码"
+                    />
+            </LinearLayout>
             <com.github.fastshape.MyTextView
+                android:id="@+id/tv_update_pwd_complete"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="确定"
