--- a/app/src/main/res/layout/zhanghu_anquan_act.xml
+++ b/app/src/main/res/layout/zhanghu_anquan_act.xml
@@ -15,6 +15,8 @@
         android:gravity="center_vertical"
         android:paddingLeft="10dp"
         android:background="@color/white"
+        android:drawableRight="@drawable/arrow_right"
+        android:paddingRight="10dp"
         />
     <TextView
         android:id="@+id/tv_anquan_update_pwd"
@@ -25,6 +27,8 @@
         android:paddingLeft="10dp"
         android:background="@color/white"
         android:layout_marginTop="2px"
+        android:drawableRight="@drawable/arrow_right"
+        android:paddingRight="10dp"
         />
     <TextView
         android:id="@+id/tv_anquan_update_account"
@@ -35,5 +39,7 @@
         android:paddingLeft="10dp"
         android:background="@color/white"
         android:layout_marginTop="2px"
+        android:drawableRight="@drawable/arrow_right"
+        android:paddingRight="10dp"
         />
 </LinearLayout>
