--- a/app/src/main/res/layout/address_list_item.xml
+++ b/app/src/main/res/layout/address_list_item.xml
@@ -66,8 +66,8 @@
             android:id="@+id/cb_address"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:normal_drawable="@drawable/qq"
-            app:checked_drawable="@drawable/qq"
+            app:normal_drawable="@drawable/normal"
+            app:checked_drawable="@drawable/select"
             android:checked="false"
             android:text="默认地址"
             android:textColor="@color/gray_66"
