--- a/app/src/main/res/layout/set_name_act.xml
+++ b/app/src/main/res/layout/set_name_act.xml
@@ -13,24 +13,8 @@
             android:orientation="vertical"
             android:background="@color/bg_color"
             >
-            <!--your view-->
-            <com.github.fastshape.MyImageView
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:src="@drawable/qq"
-                app:clipRadius="22dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="上传头像"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
-                android:textSize="14sp"
-                />
             <com.zhizhong.yujian.view.MyEditText
+                android:id="@+id/et_set_name"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:gravity="center_vertical"
@@ -47,12 +31,13 @@
                 android:hint="昵称"
                 />
             <com.github.fastshape.MyTextView
+                android:id="@+id/tv_set_name_complete"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="完成"
                 android:gravity="center"
                 android:textColor="@color/white"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 app:solidColor="@color/red_button"
                 app:pressColor="@color/red_press"
                 app:radius="4dp"
