--- a/app/src/main/res/layout/tuijian_goods_item.xml
+++ b/app/src/main/res/layout/tuijian_goods_item.xml
@@ -1,58 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@color/bg_color"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                    xmlns:tools="http://schemas.android.com/tools"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:orientation="vertical"
+                                    app:cardBackgroundColor="@color/bg_color"
+                                    app:cardElevation="4dp"
+
     >
-<android.support.v7.widget.CardView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:cardElevation="2dp"
-    >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:gravity="center_vertical"
+        android:orientation="vertical"
         >
+
         <ImageView
+            android:id="@+id/iv_goods_img"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/qq"
+            tools:src="@drawable/qq"
+            android:scaleType="centerCrop"
             />
+
         <TextView
+            android:id="@+id/tv_goods_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="翡翠手镯女"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/gray_33"
+            tools:text="翡翠手镯女"
+            android:maxLines="2"
+            android:ellipsize="end"
             />
+
         <TextView
+            android:id="@+id/tv_goods_now_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="¥80万"
-            android:textColor="@color/red"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="2dp"
+            android:textColor="@color/red"
+            tools:text="¥80000"
             />
+
         <TextView
+            android:id="@+id/tv_goods_old_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="¥123"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="2dp"
             android:textSize="12sp"
+            tools:text="¥123"
             />
     </LinearLayout>
     <com.github.fastshape.MyTextView
+        android:id="@+id/tv_goods_collection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="收藏"
         android:layout_gravity="bottom|right"
         android:layout_margin="10dp"
+        android:drawableLeft="@drawable/collection_mall"
+        android:drawablePadding="4dp"
+        android:text="收藏"
         />
 </android.support.v7.widget.CardView>
-</LinearLayout>
