--- a/app/src/main/res/layout/tuijian_goods_item.xml
+++ b/app/src/main/res/layout/tuijian_goods_item.xml
@@ -35,6 +35,7 @@
             android:textColor="@color/gray_33"
             tools:text="翡翠手镯女"
             android:maxLines="2"
+            android:lines="2"
             android:ellipsize="end"
             />
 
