--- a/app/src/main/res/layout/goods_detail_act.xml
+++ b/app/src/main/res/layout/goods_detail_act.xml
@@ -25,18 +25,59 @@
                 android:orientation="vertical"
                 >
                 <!--your view-->
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/vp_goods_detail"
+                <FrameLayout
+                    android:id="@+id/fl_goods_banner"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </android.support.v4.view.ViewPager>
+                    android:layout_height="180dp">
+                </FrameLayout>
+                <LinearLayout
+                    android:id="@+id/ll_goods_banner_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginTop="10dp"
+                    >
+                    <com.github.fastshape.MyTextView
+                        android:id="@+id/tv_goods_banner_video"
+                        android:layout_width="wrap_content"
+                        android:layout_height="22dp"
+                        android:text="视频"
+                        android:layout_marginRight="15dp"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        app:radius="11dp"
+                        app:borderColor="@color/gray_66"
+                        android:textColor="@color/white"
+                        app:solidColor="@color/gray_66"
+                        android:gravity="center"
+                        app:all_line="true"
+                        />
+                    <com.github.fastshape.MyTextView
+                        android:id="@+id/tv_goods_banner_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="22dp"
+                        android:text="图片"
+                        android:layout_marginRight="15dp"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        app:solidColor="@color/white"
+                        app:radius="11dp"
+                        app:borderColor="@color/gray_66"
+                        android:textColor="@color/gray_66"
+                        android:gravity="center"
+                        app:all_line="true"
+                        />
+                </LinearLayout>
                 <TextView
                     android:id="@+id/tv_goods_detail_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="[可卖回]御见翡翠本命佛吊坠御见翡翠本命佛吊坠御见翡翠本命佛吊坠"
-                    android:layout_margin="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="15dp"
                     android:gravity="center"
                     android:layout_gravity="center_horizontal"
                     android:textColor="@color/gray_33"
