--- a/app/src/main/res/layout/goods_image_frag.xml
+++ b/app/src/main/res/layout/goods_image_frag.xml
@@ -7,10 +7,12 @@
               android:layout_height="match_parent"
               android:background="@color/bg_color"
     >
-<ImageView
-    android:id="@+id/iv_goods_img_banner"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:src="@drawable/banner"
+<com.youth.banner.Banner
+    android:id="@+id/bn_goods_img_banner"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:delay_time="5000"
+    app:image_scale_type="fit_xy"
+    app:scroll_time="2000"
     />
 </LinearLayout>
